# rust-obj-terminal-viewer

./: .gitignore  Cargo.toml  README.md  baycentric_coordinates.txt  generate-flamegraph.cmd  obj_parser_pseudocode.txt  todo.md  todo.txt  triangle-pseudocode.txt
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: my_benchmark.rs  obj_parsing.rs  obj_parsing_benchmark.rs  rendering.rs
benchmarks/: obj_parsing.rs  rendering.rs
objects/: Office Chair.mtl  office_chair.mtl
src/: lib.rs  main.rs
src/general/: mod.rs  positions_2d.rs  positions_3d.rs  sphere_positions.rs  unique_list.rs
src/renderer/: algorithm.rs  camera_rotation.rs  events.rs  interface.rs  mod.rs  obj_parser.rs  render.rs  transformation.rs
src/renderer/pipeline/: fragment_shader.rs  mod.rs  rasterization.rs  terminal_output.rs  transformation.rs
