[package]
name = "rust-obj-terminal-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.25.0"
clap = { version = "4.0", features = ["derive"] }
image = "0.24.4"

# needed to generate flamegraphs with `cargo flamegraph`
[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "obj_parsing_benchmark"
harness = false
