[package]
name = "rust-obj-terminal-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.25.0"
clap = { version = "4.0", features = ["derive"] }
image = "0.24.4"

# needed to generate flamegraphs with `cargo flamegraph`
[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "obj_parsing"
# the path is needed because the benchmark file is not in the standard criterion folder "benches"
path = "benchmarks/obj_parsing.rs"
harness = false

[[bench]]
name = "rendering"
path = "benchmarks/rendering.rs"
harness = false
